[polish] Minor improvements